@@ -2,7 +2,7 @@
 class PrEQB_11
 {
     public static void main(String[] args) {
-       Integer obj = new Integer(100);// Please ignor this line
+       Integer obj = Integer.valueOf(100);
        int num = obj.intValue();
        System.out.println("Wrapper Class Object :" + obj);
        System.out.println("Primitive Data :" + num);
